--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Listando Admins</h1>
-
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">Administradores</h1>
+  </div>
+<!-- /.col-lg-12 -->
+</div>
 <table class="table table-striped table-bordered table-hover">
   <thead>
       <tr>
@@ -14,9 +18,9 @@
             <td><%= admin.id %></td>
             <td><%= admin.email %></td>
             <td style="width: 100px">
-              <button type="button" class="btn btn-primary btn-circle">
+              <%= link_to edit_admins_backoffice_admin_path(admin), class:"btn btn-primary btn-circle" do %>
                 <i class="fa fa-edit"></i>
-              </button>
+              <% end %>
               <button type="button" class="btn btn-danger btn-circle">
                 <i class="fa fa-minus"></i>
               </button>
