--- a/app/views/admins_backoffice/admins/shared/_form.html.erb
+++ b/app/views/admins_backoffice/admins/shared/_form.html.erb
@@ -18,7 +18,7 @@
   <div class="col-lg-12">
       <div class="panel panel-default">
           <div class="panel-heading">
-              <%= "#{action_message} Administrador" %>
+              <%= @admin.model_name.human %>
           </div>
           <div class="panel-body">
               <div class="row">
@@ -26,17 +26,25 @@
                       <%= form_with(model: [ :admins_backoffice, @admin ], local: true) do |form| %>
                           <div class="form-group">
                               <%= form.label :email %>
-                              <%= form.text_field :email, class:"form-control" %>
+                              <%= form.text_field :email, 
+                                        class:"form-control", 
+                                        placeholder: t('placeholder.admin_email')  %>
                           </div>
                           <div class="form-group">
                               <%= form.label :password %>
-                              <%= form.password_field :password, class:"form-control" %>
+                              <%= form.password_field :password, 
+                                        class:"form-control", 
+                                        placeholder: t('placeholder.admin_password')  %>
                           </div>
                           <div class="form-group">
                               <%= form.label :password_confirmation %>
-                              <%= form.password_field :password_confirmation, class:"form-control" %>
+                              <%= form.password_field :password_confirmation, 
+                                        class:"form-control", 
+                                        placeholder: t('placeholder.admin_password_confirmation')  %>
                           </div>
-                          <button type="submit" class="btn btn-default">Salvar</button>
+                          <button type="submit" class="btn btn-default">
+                              <%= t('button.save') %>
+                          </button>
                       <% end %>
                   </div>
               </div>
